# haskell_module_dumper

./: haskell-module-dumper.cabal  stack.yaml
app/: Main.hs
